Created Core Data Manager Singleton Added CharacterList Tableview cell Created Character Manager Added Core Data object to be codable Updated networking service to add caching for core data

--- a/StarWarz/Podfile
+++ b/StarWarz/Podfile
@@ -6,6 +6,7 @@ target 'StarWarz' do
   use_frameworks!
 
   # Pods for StarWarz
+  pod 'Kingfisher', '~> 5.0'
 
   target 'StarWarzUITests' do
     # Pods for testing
